--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,18 @@ sudo: false
 language: node_js
 node_js:
   - "stable"
+cache:
+  directories:
+  - node_modules
+script:
+  - npm run test
+  - npm run build
+
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $repo_token
+  local_dir: build
 
 branches:
   only:
