--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,11 @@ script:
   - npm run build
 
 deploy:
-  provider: pages
-  skip_cleanup: true
-  github_token: $repo_token
-  local_dir: build
+  provider: heroku
+  app: "telephone-verify"
+  api_key:
+    secure: "aee1211a-1d16-4114-9c3c-76625cbbefe9"
+  
 
 branches:
   only:
