fix travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,5 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $repo_token
-  local_dir: build
   on:
-    branch:
-      - master
+    branch: master
