--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
     "build": "webpack --mode=development",
     "predeploy": "npm run build",
     "deploy": "gh-pages-deploy",
-    "lint": "npm run lint:js && npm run lint:dup",
-    "lint:check": "eslint --print-config .eslintrc.json | eslint-config-prettier-check",
+    "lint": "npm run lint:js",
+    "lint:check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "lint:js:fix": "npm run lint:js -- --fix",
-    "lint:js": "eslint src/components/*.js -c .eslintrc.json",
-    "lint:dup": "jscpd -g --threshold=1 tests docker"
+    "lint:js": "eslint src/components/*.js -c .eslintrc.js"
   },
   "name": "fronttestmail",
   "homepage": "https://mpolyakowa.github.io/FrontTestMailru/",
@@ -48,7 +47,7 @@
   "description": "test task for mail.ru",
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run format:staged"
+      "pre-commit": "npm run lint"
     }
   }
 }
