--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "test": "jest && eslint ./src/*.js",
     "start": "webpack-dev-server",
     "build": "webpack --mode=development",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages-deploy",
+    // "predeploy": "npm run build",
+    // "deploy": "gh-pages-deploy",
     "lint": "npm run lint:js",
     "lint:check": "eslint --print-config .eslintrc.js | eslint-config-prettier-check",
     "lint:js:fix": "npm run lint:js -- --fix",
