--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ script:
   - npm run test
   - npm run build
 
+before_deploy:
+  - npm run build
+
 deploy:
   provider: pages
   skip_cleanup: true
