--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_deploy:
 deploy:
   provider: pages
   skip_cleanup: true
+  local_dir: build
   github_token: $repo_token
   on:
     branch: master
